--- a/index.html
+++ b/index.html
@@ -42,24 +42,28 @@
 <script>
     $(function () {
         $('#main_container').cloneFiltering({
-            container: '#container',
-            template : '[data-template="employee-list"]',
-            ajax     : {
-                url      : 'ajax/get_employee_list.php',
-                csrfToken: {
-                    name : 'my_token',
-                    value: 'x5925626lsd62'
-                }
+            clone: {
+                container: '#container',
+                template : '[data-template="employee-list"]'
             },
-            search   : {
-                input: {
-                    selector: 'input.search'
+            filter: {
+                ajax     : {
+                    url      : 'ajax/get_employee_list.php',
+                    csrfToken: {
+                        name : 'my_token',
+                        value: 'x5925626lsd62'
+                    }
                 },
-                btn  : 'button.search_btn'
-            },
-            loadMore : '#load_more_btn',
-            sort     : {
-                selector: '#sorter'
+                search   : {
+                    input: {
+                        selector: 'input.search'
+                    },
+                    btn  : 'button.search_btn'
+                },
+                loadMore : '#load_more_btn',
+                sort     : {
+                    selector: '#sorter'
+                }
             }
         })
     });
