--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 </div>
-<script src="js/jquery-1.11.1.js"></script>
+<script src="https://code.jquery.com/jquery-1.7.2.js"></script>
 <script src="js/jquery-cloneFiltering.js"></script>
 <script>
     // no recursive yet
